--- a/08.JS-Applications/10.Single Page Applications - Exercise/01.Forum/static/style.css
+++ b/08.JS-Applications/10.Single Page Applications - Exercise/01.Forum/static/style.css
@@ -257,3 +257,19 @@ footer p {
 footer span {
     font-size: 1.5em;
 }
+
+.article {
+    background-color: white;
+    width: 525px;
+    border: 1px solid black;
+    padding: 60px;
+    margin: 20px;
+}
+
+.article-title {
+    text-align: center;
+}
+
+.bold {
+    font-weight: bold;
+}
