--- a/12.C#-Web/Exams/ASP.NET Fundamentals Exam Preparation – 17 October 2022/Watchlist/Views/Movies/Add.cshtml
+++ b/12.C#-Web/Exams/ASP.NET Fundamentals Exam Preparation – 17 October 2022/Watchlist/Views/Movies/Add.cshtml
@@ -1,4 +1,6 @@
-﻿@*@{
+﻿@model AddMovieViewModel
+
+@{
     ViewBag.Title = "Add Movie";
 }
 
@@ -48,4 +50,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
