--- a/12.C#-Web/Exams/ASP.NET Fundamentals Exam Preparation – 17 October 2022/Watchlist/Views/Shared/_LoginPartial.cshtml
+++ b/12.C#-Web/Exams/ASP.NET Fundamentals Exam Preparation – 17 October 2022/Watchlist/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Watchlist.Data.Models
+@using Watchlist.Data.Entities
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
